fixed filter config alignment issue for North

--- a/src/app/components/core/north/north-task-modal/north-task-modal.component.css
+++ b/src/app/components/core/north/north-task-modal/north-task-modal.component.css
@@ -63,3 +63,8 @@ a { color: black; }
   opacity: 0.7;
 }
 
+@media screen and (min-width: 769px) {
+  .view-content {
+    display: block !important;
+  }
+}
